objects/ASI_FOC_Free_Goods_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select correct Ship To customer</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM KH FOC Request, ASI CRM KH FOC Request Read-Only</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer (KH)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM (Ship To)</relationshipLabel>
        <relationshipName>Free_Goods_Request_POSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Not Converted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Submit for Cancel</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sync_to_JDE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to JDE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_System_Remark__c</fullName>
        <label>System Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_FOC_Amount_AD__c</fullName>
        <label>FOC Amount (A&amp;D)</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_CRM_TW_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_CRM_A_D_or_A_P__c</field>
            <operation>equals</operation>
            <value>A&amp;D</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Outlet</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 6 AND 7) OR 3 OR (4 AND 5)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM TW FOC Request Read-Only, ASI CRM TW POSM Request Read-Only, ASI CRM TW FOC Request, ASI CRM TW POSM Request</value>
            </filterItems>
            <filterItems>
                <field>Account.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ASI CRM TW FOC Request Read-Only, ASI CRM TW POSM Request Read-Only, ASI CRM TW FOC Request, ASI CRM TW POSM Request</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>PH Contract FOC/POSM Request, PH PO FOC/POSM Request, PH Contract FOC POSM Request Read Only, PH PO FOC POSM Request Read Only</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>PH DF Customer, PH DP Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>TW Supplier, Outlet (TW)</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>TW Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM (Target Outlet)</relationshipLabel>
        <relationshipName>Free_Goods_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Actual_Quantity_9L__c</fullName>
        <label>Total Actual Quantity (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Bottle_Value__c</fullName>
        <label>Total Bottle Value</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_CRM_Bottle_Value__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_CRM_Bottle_Value__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Issued_Qty__c</fullName>
        <label>Total Issued Qty</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_FOC_Issued_Qty__c</summarizedField>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Trade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Year__c</fullName>
        <formula>TEXT(YEAR(ASI_FOC_Date_of_Delivery__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Account_DA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (DA)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3 AND 4) OR 5</booleanFilter>
            <errorMessage>Please select correct Account (DA)</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Outlet (HK), JDE Salesman Cash Account (HK)</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_HK_CRM_IsDeliveryAccount__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_HK_CRM_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_HK_CRM_Location__c</field>
                <operation>notEqual</operation>
                <value>#_MACDPLOC</value>
            </filterItems>
            <filterItems>
                <field>$User.BypassVR__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM</relationshipLabel>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Actual_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Alternate_Delivery_Address_Floor__c</fullName>
        <label>Alternate Delivery Address Floor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Apply_Tax_Saving_Logic__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Apply Tax Saving Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Approval_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Free_Goods_Request_POSM2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Free_Goods_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Attention__c</fullName>
        <label>Attention</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Batch_Import_KEY__c</fullName>
        <label>Batch Import KEY</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Batch_Request_Success_Total__c</fullName>
        <label>Batch Request Success Total</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Batch_Request_Total__c</fullName>
        <label>Batch Request Total</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Budget_Amount__c</fullName>
        <description>HK FOC Logic: If JDE Order Type is CS, then whole FOC cost = $0</description>
        <formula>IF (CONTAINS(RecordType.DeveloperName,&quot;ASI_FOC_HK&quot;),
IF(ASI_FOC_Actual_Amount__c &gt; 0, ASI_FOC_Actual_Amount__c, IF(ASI_FOC_Order_Status__c=&quot;CS&quot;, 0, ASI_FOC_Free_Goods_Total_Cost__c)),
IF (CONTAINS(RecordType.DeveloperName,&quot;ASI_FOC_CN&quot;)
,IF(ASI_FOC_Actual_Amount__c &gt; 0, ASI_FOC_Actual_Amount__c+ ASI_CRM_CN_FG_Total_Logistics_Amount__c , ASI_FOC_Free_Goods_Total_Cost__c+ ASI_CRM_CN_FG_Total_Logistics_Amount__c)
,IF(ASI_FOC_Actual_Amount__c &gt; 0, ASI_FOC_Actual_Amount__c, ASI_FOC_Free_Goods_Total_Cost__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Budget_Amount_withFee__c</fullName>
        <formula>ASI_FOC_Budget_Amount__c + ASI_CRM_CN_FG_Total_Logistics_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Amount (with fee)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Building__c</fullName>
        <label>Building</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_CN_Already_4_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Already 4 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_CN_Delivery_Zone__c</fullName>
        <label>Delivery Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shanghai - Beihai</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Beijing</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Changsha</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Chengdu</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Chongqing</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Dalian</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Foshan</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Fuzhou</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Ganzhou</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Guangzhou</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Guiyang</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Haikou</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Hangzhou</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Harbin</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Hefei</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Jiangmen</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Jiaxing</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Jinan</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Jinjiang</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Kunming</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Leqing</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Nanchang</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Nanjing</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Nanning</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Ningbo</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Qingdao</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Quangzhou</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Sanming</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Shanghai</fullName>
                </value>
                <value>
                    <fullName>Shanghai - Shantou</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_CN_Send_Reminder_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminder Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_CN_To_City__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To City</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_City__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN City</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_City__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM (To City)</relationshipLabel>
        <relationshipName>Free_Goods_Request_POSM1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Company_Chop_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Chop Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Customer_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Question Bottles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Date_of_Delivery__c</fullName>
        <label>Request Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Deliver_to_Address_Line_1__c</fullName>
        <label>Deliver to Address Line 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Deliver_to_Address_Line_2__c</fullName>
        <label>Deliver to Address Line 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Deliver_to_Address_Line_3__c</fullName>
        <label>Deliver to Address Line 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Address__c</fullName>
        <formula>ASI_FOC_Account_DA__r.ASI_HK_CRM_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Instruction_1__c</fullName>
        <label>Delivery Instruction 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Instruction_2__c</fullName>
        <label>Delivery Instruction 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Remarks__c</fullName>
        <label>Delivery Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Status__c</fullName>
        <label>Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Time_1__c</fullName>
        <label>Delivery Time 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Time_2__c</fullName>
        <label>Delivery Time 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ASI_FOC_Delivery_Window_Instruction__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>00:30</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>01:30</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>02:30</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>03:30</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>04:30</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>05:30</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>06:30</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>07:30</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>08:30</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>09:30</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>10:30</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>11:30</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>12:30</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>13:30</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>14:30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Window_Instruction__c</fullName>
        <label>Delivery Window Instruction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Before</fullName>
                </value>
                <value>
                    <fullName>After</fullName>
                </value>
                <value>
                    <fullName>Between</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_Delivery_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Zone</label>
        <referenceTo>ASI_FOC_Delivery_Zone__c</referenceTo>
        <relationshipName>Free_Goods_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Description__c</fullName>
        <label>Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_District__c</fullName>
        <label>District</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_ETA_Date__c</fullName>
        <formula>/* 
ASI_FOC_SYS_Approved_Date__c + ASI_FOC_Lead_Time__c
*/
ASI_CRM_SYS_Shipment_Date__c + ASI_FOC_Lead_Time__c + 
if( WEEKDAY(ASI_CRM_SYS_Shipment_Date__c) = 1, 2, 
  if( WEEKDAY(ASI_CRM_SYS_Shipment_Date__c) = 7, 2,
  0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Email_Notification_Template__c</fullName>
        <label>Email Notification Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Email_Step_1_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 1 Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Email_Step_2_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 2 Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Email_Step_3_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step 3 Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Estimated_Amount_withFee__c</fullName>
        <formula>ASI_FOC_Free_Goods_Total_Cost__c + ASI_CRM_CN_FG_Total_Logistics_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Amount (with fee)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Event_PO_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event PO Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_PO__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN PO, CN PO Read-Only</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_PO__c.ASI_MFM_Supplier_Name__r.Name</field>
                <operation>notEqual</operation>
                <value>FREE GOODS (61202305)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_PO__c</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM (PO Number)</relationshipLabel>
        <relationshipName>Free_Goods_Request_POSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Event_PO_Remarks__c</fullName>
        <label>Event PO Remarks</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Event_PO_Supplier_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event PO Supplier Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Free Goods Request &amp; POSM (PO Supplier Name)</relationshipLabel>
        <relationshipName>Free_Goods_Request_POSM1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Finance_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Free_Goods_Request_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Finance_Approver_New2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Free_Goods_Request_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Finance_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Free_Goods_Requests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Free_Goods_Total_Cost__c</fullName>
        <label>Estimated Amount</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_FOC_Free_Good_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ASI_FOC_Request_Item__c.ASI_FOC_Brand_Director_Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Function__c</fullName>
        <formula>Owner:User.Department</formula>
        <label>Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_HK_Paid_Amount_Raw__c</fullName>
        <label>FOC Paid Amount (Raw)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_HK_Paid_Amount__c</fullName>
        <label>FOC Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_ID_15__c</fullName>
        <formula>LEFT(Id, 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID(15)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Instruction__c</fullName>
        <label>Instruction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Is_GH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is G&amp;H</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_JDE_Order_Number__c</fullName>
        <label>JDE Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_JDE_Order_Type_Code__c</fullName>
        <label>JDE Order Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Lead_Time__c</fullName>
        <formula>MAX(ASI_FOC_Delivery_Zone__r.ASI_FOC_Delivery_lead_time_Days__c, ASI_MFM_LeadTimeCart__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (Day)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Line_Original_Request_Qty_Total__c</fullName>
        <label>Line Original Request Quantity Total</label>
        <summarizedField>ASI_FOC_Request_Item__c.ASI_FOC_Original_Request_Quantity_PC_BT__c</summarizedField>
        <summaryForeignKey>ASI_FOC_Request_Item__c.ASI_FOC_Request_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Logistic_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logistic Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Free_Goods_Requests8</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>